--- a/angular.json
+++ b/angular.json
@@ -144,8 +144,13 @@
               "devServerTarget": "bookshelves:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "bookshelves"
 }
